<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/ivKohiLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            app:tint="?colorIconNormal"
            app:srcCompat="@drawable/ic_kohi_outline"
            android:contentDescription="@string/cont_desc_kohi_app_logo"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgAboutApp"
            app:layout_constraintTop_toBottomOf="@id/ivKohiLogo"
            android:layout_marginTop="15dp"
            android:textColor="?colorTextMain"
            android:text="@string/msg_about_us"
            android:paddingHorizontal="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGetDonationVersion"
            app:layout_constraintTop_toBottomOf="@id/tvMsgAboutApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:backgroundTint="?colorButtonTint"
            android:text="@string/action_get_donation_version"
            android:textColor="@color/colorCoffeeLightX"
            android:textAllCaps="false"
            style="@style/Theme.Kohi.MaterialButton"
            />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/btnMoreApps"
            app:layout_constraintTop_toBottomOf="@id/btnGetDonationVersion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:tint="?colorIconNormal"
            style="@style/Theme.Kohi.ClickableBorderLess"
            app:srcCompat="@drawable/ic_play_store"
            android:contentDescription="@string/cont_desc_more_apps_button"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnRateApp"
            style="@style/Theme.Kohi.ClickableBorderLess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMoreApps"
            app:layout_constraintBottom_toBottomOf="@id/btnMoreApps"
            app:srcCompat="@drawable/ic_rate"
            app:tint="?colorIconNormal"
            android:contentDescription="@string/cont_desc_rate_app_button"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnShare"
            app:tint="?colorIconNormal"
            style="@style/Theme.Kohi.ClickableBorderLess"
            app:layout_constraintStart_toEndOf="@id/btnMoreApps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnMoreApps"
            app:srcCompat="@drawable/ic_share"
            android:contentDescription="@string/cont_desc_share_button"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleDonate"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnMoreApps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:textColor="?colorTextMain"
            android:text="@string/title_donate"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgDonate"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDonate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:textColor="?colorTextMain"
            android:text="@string/msg_donate"
            android:paddingHorizontal="16dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleContact"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvMsgDonate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:textColor="?colorTextMain"
            android:text="@string/title_contact_us"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgContact"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTitleContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:textColor="?colorTextMain"
            android:text="@string/email_publisher"
            android:paddingHorizontal="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>